--- a/hexo/source/_posts/透明状态栏.md
+++ b/hexo/source/_posts/透明状态栏.md
@@ -9,17 +9,17 @@ tags:
 ---
 ### **这四篇挺好** ###
 
-[由沉浸式状态栏引发的血案](http://www.jianshu.com/p/140be70b84cd)
-[Android开发：Translucent System Bar 的最佳实践](http://www.jianshu.com/p/0acc12c29c1b)
-[Android 系统状态栏沉浸式/透明化完整解决方案](http://www.jianshu.com/p/34a8b40b9308)
-[薄荷Toolbar(ActionBar)的适配方案](http://stormzhang.com/android/2015/08/16/boohee-toolbar/)
+[<font color="#0e6db0">由沉浸式状态栏引发的血案</font>](http://www.jianshu.com/p/140be70b84cd)
+[<font color="#0e6db0">Android开发：Translucent System Bar 的最佳实践</font>](http://www.jianshu.com/p/0acc12c29c1b)
+[<font color="#0e6db0">Android 系统状态栏沉浸式/透明化完整解决方案</font>](http://www.jianshu.com/p/34a8b40b9308)
+[<font color="#0e6db0">薄荷Toolbar(ActionBar)的适配方案</font>](http://stormzhang.com/android/2015/08/16/boohee-toolbar/)
 <!--more-->
 
 ### **这个小伙很不错** ###
 
-[fanKarl](https://github.com/fanKarl)/**[TranslucentBars](https://github.com/fanKarl/TranslucentBars)**
+[<font color="#0e6db0">fanKarl</font>](https://github.com/fanKarl)/**[<font color="#0e6db0">TranslucentBars</font>](https://github.com/fanKarl/TranslucentBars)**
 
-我写了个小demo，为了方便以后自己复用的，地址[戳戳看](https://github.com/CalvinNing/TranslucentBar_demo)
+我写了个小demo，为了方便以后自己复用的，地址<a href="https://github.com/CalvinNing/TranslucentBar_demo"><font color="#0e6db0">戳戳看</font></a>
 
 - **方法一（代码实现）**： 以下这段代码的作用是：在4.4以上状态栏透明、允许AppBarLayout布局扩展至状态栏
 ```java
@@ -42,6 +42,7 @@ tags:
         }
     }
 ```
+
 - **方法二（xml中配置）**： 在values-v19下styles.xml文件中添加如下代码——**AppBarLayout的内容布局就可以扩展至系统状态栏,状态栏会覆盖在toolbar上**
 ```java
 <resources>
@@ -50,16 +51,22 @@ tags:
     </style>
 </resources>
 ```
+
 ### **方法二会这样↓↓↓↓↓↓，so……还是用方法一吧，其实我是全都写上的，即代码实现+xml配置** ###
 
-
-![Paste_Image.png](http://upload-images.jianshu.io/upload_images/1811364-bd2c9c16096ac343.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+<div align="center" >
+<img src="http://upload-images.jianshu.io/upload_images/1811364-bd2c9c16096ac343.png" width="80%" alt="图片名称" align=center/>
+</div>
 
 ### **AppBarLayout背景颜色设置,后面布局中修改Background会覆盖主题中的colorPrimary** ###
 
-![Paste_Image.png](http://upload-images.jianshu.io/upload_images/1811364-6ba58d15d18110bb.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-![Paste_Image.png](http://upload-images.jianshu.io/upload_images/1811364-9ebbc3073bf1a741.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+<div align="center" >
+<img src="http://upload-images.jianshu.io/upload_images/1811364-6ba58d15d18110bb.png" width="80%" alt="图片名称" align=center/>
+</div>
+<div align="center" >
+<img src="http://upload-images.jianshu.io/upload_images/1811364-9ebbc3073bf1a741.png" width="80%" alt="图片名称" align=center/>
+</div>
 
 ### **给Toolbar设置android:layout_marginTop** ###
 
@@ -67,7 +74,9 @@ tags:
 
 ### **效果图** ###
 
-![效果图.gif](http://upload-images.jianshu.io/upload_images/1811364-f221795b95438917.gif?imageMogr2/auto-orient/strip)
+<div align="center" >
+<img src="http://upload-images.jianshu.io/upload_images/1811364-f221795b95438917.gif" width="50%" alt="图片名称" align=center/>
+</div>
 
 ### **再啰嗦一句** ###
 
@@ -94,3 +103,7 @@ android:layout_marginTop="@dimen/toolbar_margin_top",
 两步走：
 1、上述代码实现的方法，一般写在BaseActivity中
 2、在各自的布局中，需要浸入状态栏的view——肯定是位于整个布局最上端了（这就是句废话了）——设置内边距或者外边距了。
+
+### **补充** ###
+
+本篇文章总结的方法仅在小米手机和模拟器上测试过，之后在锤子手机上测试发现锤子手机状态栏仅能实现半透明。
